# codemine

./: .gitignore  LICENSE  README.md  application.py  context_chunker.py  data_classes.py  embedder.py  pyproject.toml  repo.py  settings.py  splitter.py  testing.py  vector_db.py
app/application/: commands.py
app/application/use_cases/: embed_git_repo.py
app/domain/: value_objects.py
app/domain/model/: code_chunk.py  code_document.py
app/domain/ports/: embedding_client.py  git_client.py
app/domain/repositories/: vector_store_repo.py
app/domain/services/: code_chunking_service.py  context_enrichment_service.py
app/infrastructure/: adapters.py  pinecone_vector_store.py  settings.py
app/presentation/cli/: containers.py  main.py
codemine/application/: commands.py  queries.py
codemine/application/use_cases/: embed_git_repo.py  search_chunks.py
codemine/domain/: value_objects.py
codemine/domain/model/: code_chunk.py  code_document.py  git_repo.py
codemine/domain/ports/: embedding_client.py  git_client.py
codemine/domain/repositories/: vector_store_repo.py
codemine/domain/services/: code_chunking_service.py  context_enrichment_service.py
codemine/infrastructure/: adapters.py  pinecone_vector_store.py  settings.py
codemine/presentation/cli/: containers.py  main.py
